--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio-site",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://weeshengchu.github.io/react-portfolio/",
+  "homepage": "https://weeshengchu.github.io/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.27",
     "@fortawesome/free-brands-svg-icons": "^5.12.1",
